--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify/react": "^5.0.2",
+    "@mui/material": "^5.16.6",
     "dsvsite": "file:",
     "flowbite-react": "^0.10.1",
     "framer-motion": "^11.3.20",
@@ -19,6 +21,7 @@
     "react-scroll": "^1.9.0"
   },
   "devDependencies": {
+    "@iconify/tailwind": "^1.1.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
