--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "dsvsite": "file:",
     "flowbite-react": "^0.10.1",
     "framer-motion": "^11.3.20",
+    "i18next": "^23.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-i18next": "^15.0.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.0",
     "react-scroll": "^1.9.0"
