--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@iconify/react": "^5.0.2",
     "@mui/material": "^5.16.6",
     "dsvsite": "file:",
